--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "gulp-stylus": "^1.3.4",
     "gulp-svgmin": "^0.4.8",
     "gulp-uglify": "^1.0.1",
-    "hammerjs": "^2.0.4",
-    "lodash": "^2.4.1",
+    "gulp-watch": "^4.2.4",
     "open": "0.0.5",
     "path": "^0.4.9",
     "run-sequence": "^1.0.1",
