--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-load-plugins": "^0.7.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-plumber": "^0.6.6",
+    "gulp-purifycss": "^0.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-size": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
