--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "project-template",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "main": "index.html",
   "description": "Front-End templates for Project",
   "keywords": "",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
+  },
   "devDependencies": {
+    "coffee-react-transform": "^3.3.0",
+    "coffee-reactify": "^4.0.0",
     "coffee-script": "^1.8.0",
     "coffeeify": "^0.7.0",
+    "coffeelint-cjsx": "^2.0.2",
     "connect-livereload": "^0.5.0",
-    "critical": "^0.5.0",
     "express": "^4.10.6",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
@@ -17,24 +22,32 @@
     "gulp-clean": "^0.3.1",
     "gulp-coffeelint": "^0.4.0",
     "gulp-concat": "^2.4.1",
+    "gulp-dss": "^0.1.0",
     "gulp-header": "^1.2.2",
+    "gulp-htmlmin": "^1.2.0",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^1.2.1",
     "gulp-jade": "^0.9.0",
+    "gulp-jade-usemin": "^1.1.0",
     "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.7.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-plumber": "^0.6.6",
-    "gulp-purifycss": "^0.2.0",
     "gulp-rename": "^1.2.0",
+    "gulp-rev": "^6.0.1",
     "gulp-size": "^1.1.0",
-    "gulp-sourcemaps": "^1.2.8",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^1.3.4",
     "gulp-svgmin": "^0.4.8",
     "gulp-uglify": "^1.0.1",
+    "gulp-usemin": "^0.3.15",
+    "gulp-util": "^3.0.7",
     "gulp-watch": "^4.2.4",
+    "jade-inheritance": "^0.2.1",
     "open": "0.0.5",
     "path": "^0.4.9",
+    "psi": "^2.0.2",
+    "require-directory": "^2.1.1",
     "run-sequence": "^1.0.1",
     "tiny-lr": "^0.1.4"
   },
@@ -42,6 +55,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "build": "gulp prod",
+    "start": "gulp dev",
     "test": "gulp test"
   },
   "private": true
