--- a/package.json
+++ b/package.json
@@ -44,9 +44,17 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.2.4",
     "jade-inheritance": "^0.2.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-shim": "^1.1.2",
     "open": "0.0.5",
     "path": "^0.4.9",
+    "phantomjs": "^1.9.18",
     "psi": "^2.0.2",
+    "react-addons-test-utils": "^0.14.3",
     "require-directory": "^2.1.1",
     "run-sequence": "^1.0.1",
     "tiny-lr": "^0.1.4"
