--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "project-template",
-  "version": "2.0.0",
+  "version": "0.0.0",
   "main": "index.html",
   "description": "Front-End templates for Project",
   "keywords": "",
+  "homepage": "http://yoursite.com",
   "dependencies": {
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
