--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
+    "browserify": "^12.0.1",
     "coffee-react-transform": "^3.3.0",
     "coffee-reactify": "^4.0.0",
     "coffee-script": "^1.8.0",
@@ -19,7 +20,6 @@
     "express": "^4.10.6",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
-    "gulp-browserify": "^0.5.0",
     "gulp-clean": "^0.3.1",
     "gulp-coffeelint": "^0.4.0",
     "gulp-concat": "^2.4.1",
@@ -51,6 +51,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-phantomjs-shim": "^1.1.2",
+    "node-notifier": "^4.3.1",
     "open": "0.0.5",
     "path": "^0.4.9",
     "phantomjs": "^1.9.18",
@@ -58,7 +59,9 @@
     "react-addons-test-utils": "^0.14.3",
     "require-directory": "^2.1.1",
     "run-sequence": "^1.0.1",
-    "tiny-lr": "^0.1.4"
+    "tiny-lr": "^0.1.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
