--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-clean": "^0.3.1",
-    "gulp-coffeelint": "^0.4.0",
-    "gulp-concat": "^2.4.1",
+    "gulp-coffeelint-cjsx": "0.0.3",
     "gulp-dss": "^0.1.0",
     "gulp-header": "^1.2.2",
     "gulp-htmlmin": "^1.2.0",
-    "gulp-if": "^1.2.5",
     "gulp-imagemin": "^1.2.1",
     "gulp-jade": "^0.9.0",
-    "gulp-jade-usemin": "^1.1.0",
     "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.7.1",
     "gulp-minify-css": "^0.3.11",
