--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-dss": "^0.1.0",
     "gulp-header": "^1.2.2",
     "gulp-htmlmin": "^1.2.0",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^1.2.1",
     "gulp-jade": "^0.9.0",
     "gulp-livereload": "^2.1.1",
