--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-stylus": "^1.3.4",
     "gulp-svgmin": "^0.4.8",
     "gulp-uglify": "^1.0.1",
+    "gulp-uncss": "^1.0.4",
     "gulp-usemin": "^0.3.15",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.2.4",
