--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coffeeify": "^0.7.0",
     "coffeelint-cjsx": "^2.0.2",
     "connect-livereload": "^0.5.0",
+    "critical": "^0.6.0",
     "express": "^4.10.6",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
