--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.html",
   "description": "Front-End templates for Project",
   "keywords": "",
+  "author": "Your Name <you@yoursite.com>",
   "homepage": "http://yoursite.com",
   "dependencies": {
     "react": "^0.14.3",
